card margin on mobile fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -153,7 +153,8 @@ i {
       border-radius: 50%; }
       @media only screen and (max-width: 37.5em) {
         .card__picture-img-2 {
-          height: 80%; } }
+          height: 75%;
+          margin-top: 2rem; } }
   .card__title {
     height: 5rem;
     background-color: var(--color-white);
@@ -711,8 +712,8 @@ i {
   @media only screen and (max-width: 37.5em) {
     .row {
       grid-template-rows: min-content repeat(2, 5rem) 5rem;
-      grid-template-columns: 15rem 15rem;
-      margin-bottom: 3rem; } }
+      grid-template-columns: 15rem 12rem;
+      margin-bottom: 6rem; } }
   .row__pic {
     grid-row: 1 / -1;
     grid-column: 1 / 2;
@@ -727,7 +728,7 @@ i {
     display: flex; }
     @media only screen and (max-width: 37.5em) {
       .row__day {
-        font-size: 2.5rem;
+        font-size: 2.3rem;
         justify-content: center; } }
   .row__title {
     grid-row: 2 / 3;
@@ -773,7 +774,7 @@ input[type="file"] {
   position: absolute;
   z-index: -1;
   top: 11px;
-  left: 50px;
+  left: 48px;
   font-size: 12px;
   color: var(--color-tertiary-light); }
 
