--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -668,8 +668,8 @@
       }
       @media only screen and (max-width: $bp-small) {
         grid-template-rows: min-content repeat(2,5rem) 5rem;
-        grid-template-columns: 15rem 15rem;
-        margin-bottom: 3rem;
+        grid-template-columns: 15rem 12rem;
+        margin-bottom: 6rem;
           
       }
 
@@ -704,7 +704,7 @@
             
 
             @media only screen and (max-width: $bp-small) {
-                font-size: 2.5rem;
+                font-size: 2.3rem;
                 justify-content: center;
 
             }
@@ -769,7 +769,7 @@
     position: absolute;
     z-index: -1;
     top: 11px;
-    left: 50px;
+    left: 48px;
     font-size: 12px;
     color: var(--color-tertiary-light);
   }
